--- a/src/app/i18n/el.json
+++ b/src/app/i18n/el.json
@@ -3,5 +3,9 @@
   "about": "Σχετικά",
   "services": "Υπηρεσίες",
   "projects": "Έργα",
-  "GetaQuote": "Λάβετε προσφορά"
+  "GetaQuote": "Λάβετε προσφορά",
+  "heroSection": "Στην SmartTech, ενδυναμώνουμε τις επιχειρήσεις με τεχνολογία αιχμής και καινοτόμες λύσεις, σχεδιασμένες για να απλοποιούν και να μεταμορφώνουν την ψηφιακή σας εμπειρία. Από εύχρηστο λογισμικό μέχρι ισχυρά εργαλεία που ενισχύουν την παραγωγικότητα, κάνουμε το όραμά σας πραγματικότητα με ακρίβεια και εξειδίκευση.",
+  "getStarted": "Ξεκινήστε τώρα!",
+  "learn": "Μάθετε περισσότερα",
+  "whatwe": "Τι κάνουμε"
 }
