--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -3,5 +3,9 @@
   "about": "About",
   "services": "Services",
   "projects": "Projects",
-  "GetaQuote": "Get a Quote"
+  "GetaQuote": "Get a Quote",
+  "heroSection": "At SmartTech, we empower businesses with cutting-edge technology and innovative solutions designed to simplify and transform your digital experience. From streamlined software to powerful tools that enhance productivity, we bring your vision to life with precision and expertise",
+  "getStarted": "Get Started Now",
+  "learn": "Learn More",
+  "whatwe": "What We Do?"
 }
