--- a/src/app/i18n/el.json
+++ b/src/app/i18n/el.json
@@ -7,5 +7,32 @@
   "heroSection": "Στην SmartTech, ενδυναμώνουμε τις επιχειρήσεις με τεχνολογία αιχμής και καινοτόμες λύσεις, σχεδιασμένες για να απλοποιούν και να μεταμορφώνουν την ψηφιακή σας εμπειρία. Από εύχρηστο λογισμικό μέχρι ισχυρά εργαλεία που ενισχύουν την παραγωγικότητα, κάνουμε το όραμά σας πραγματικότητα με ακρίβεια και εξειδίκευση.",
   "getStarted": "Ξεκινήστε τώρα!",
   "learn": "Μάθετε περισσότερα",
-  "whatwe": "Τι κάνουμε"
+  "whatwe": "Τι κάνουμε",
+  "empower": "Ενδυναμώνουμε τις επιχειρήσεις με έξυπνες, καινοτόμες λύσεις.",
+  "trust": "Αξιόπιστοι Ενεργοί Πελάτες",
+  "happy": "Ικανοποιημένοι Πελάτες",
+  "rating": "Βαθμολογία 4.5",
+  "children": "Βοηθώντας τα Παιδιά να Κατανοήσουν και να Υποστηρίξουν Άτομα με Αναπηρίες",
+  "service": "Οι Υπηρεσίες μας",
+  "graphicDesign": "Γραφιστικός Σχεδιασμός",
+  "graphicDesignpara": "Με έναν μέσο χρόνο ολοκλήρωσης 21 ημερών, σας βοηθάμε να αφηγηθείτε όμορφες και εμπνευσμένες ιστορίες, από την ιδέα έως την υλοποίηση.",
+  "socialMedia": "Κοινωνικά Δίκτυα",
+  "socialmediapara": "Η ομάδα μας από έμπειρους Διαχειριστές Κοινωνικών Δικτύων θα μεταμορφώσει τα κοινωνικά σας δίκτυα σε ένα από τα πιο ισχυρά σας εργαλεία μάρκετινγκ.",
+  "content": "Συγγραφή Περιεχομένου",
+  "contentpara": "Η συγγραφή είναι ο τρόπος με τον οποίο αφηγείστε την ιστορία σας, και στη SmartTech κάνουμε τις λέξεις να δουλεύουν για εσάς! Αφήστε την ιστορία σας να ειπωθεί από ανθρώπους που ζουν για τον γραπτό λόγο.",
+  "video": "Παραγωγή Βίντεο",
+  "videopara": "Διαφήμιση για την επιχείρησή σας με ποιότητα κινηματογραφικού επιπέδου. Αν ο στόχος σας είναι να κερδίσετε την προσοχή του κοινού, κάθε βίντεο θα είναι βραβευμένο!",
+  "project": "Τελευταία Ολοκληρωμένα Πρότζεκτ Των Πελατών Μας",
+  "punime": "Πρότζεκτ",
+  "projekti1": "Σχέδια Κοινωνικών Δικτύων για την Danozone Digital",
+  "projekti2": "Ιστορία για Ανάρτηση στα Κοινωνικά Δίκτυα: Ιατρική Φροντίδα",
+  "projekti3": "Σχέδια Αναρτήσεων για Κοινωνικά Δίκτυα: Έπιπλα",
+  "projekti4": "Αναρτήσεις Κοινωνικών Δικτύων - Λογιστικές Υπηρεσίες",
+  "client": "Τι Λένε οι Πελάτες μας",
+  "klient1": "Η επιλογή της SmartTech ήταν μία από τις καλύτερες αποφάσεις που πήραμε. Η εξειδίκευσή τους έδωσε ζωή στις ιδέες μας, και το τελικό αποτέλεσμα είναι καλύτερο από ό,τι είχαμε φανταστεί.",
+  "klient2": "Η συνεργασία με τη SmartTech ήταν καθοριστική. Κατάλαβαν αμέσως τις ανάγκες μου και παρείχαν μια λύση που ήταν τόσο καινοτόμα όσο και εύχρηστη.",
+  "klient3": "Δεν θα μπορούσα να είμαι πιο ευχαριστημένος με την υπηρεσία που έλαβα από τη SmartTech. Αντιμετώπισαν κάθε πτυχή με επαγγελματισμό, κάνοντας όλη τη διαδικασία να φαίνεται εύκολη.",
+  "costumer": "Πελάτης",
+  "touch": "Επικοινωνήστε Μαζί Μας",
+  "cpara": "Αν έχετε άλλες ερωτήσεις ή χρειάζεστε περαιτέρω βοήθεια, μην διστάσετε να επικοινωνήσετε μαζί μας παρακάτω."
 }
