--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -7,5 +7,32 @@
   "heroSection": "At SmartTech, we empower businesses with cutting-edge technology and innovative solutions designed to simplify and transform your digital experience. From streamlined software to powerful tools that enhance productivity, we bring your vision to life with precision and expertise",
   "getStarted": "Get Started Now",
   "learn": "Learn More",
-  "whatwe": "What We Do?"
+  "whatwe": "What We Do?",
+  "empower": "Empowering businesses with smart, innovative solutions.",
+  "trust": "Trusted Active Clients",
+  "happy": "Happy Customers",
+  "rating": "4.5 rating",
+  "children": "Helping Kids Understand and Support People with Disabilities",
+  "service": "Our Services",
+  "graphicDesign": "Graphic Design",
+  "graphicDesignpara": "With an average turnaround time of 21 days, we’ll help you tell beautiful and inspiring stories from concept to completion.",
+  "socialMedia": "Social Media",
+  "socialmediapara": "Our team of experienced Social Media Managers will transform you social media into one of your most powerful marketing assets",
+  "content": "Content Writing",
+  "contentpara": "Writing is how you tell your story and at SmartTech we make the words work for you! Let your tale be told by people who live for the written word.",
+  "video": "Video Production",
+  "videopara": "Movie-like quality advertisement for your business. If the award you are looking for is the attention of the people, each video will be award-winning!",
+  "project": "Latest Completed Projects Of Our Clients",
+  "punime": "Project",
+  "projekti1": "Social Media Designs for Danozone Digital",
+  "projekti2": "Story Social Media Post Medical Healthcare",
+  "projekti3": "Furniture Social Media Posts Design",
+  "projekti4": "Social Media - Contabilidade Posts",
+  "client": "Client's Says About Us",
+  "klient1": "Choosing SmartTech was one of the best decisions we made. Their expertise brought our ideas to life, and the final product is better than we imagined.",
+  "klient2": "Working with SmartTech was a game-changer. They understood my needs immediately and delivered a solution that was both innovative and easy to use.",
+  "klient3": "I couldn’t be happier with the service I received from SmartTech. They handled every aspect with professionalism, making the whole process feel effortless.",
+  "costumer": "Customer",
+  "touch": "GET IN TOUCH",
+  "cpara": "If you have any other questions or are in need of further assistance do not hesitate to contact us below"
 }
