--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -34,5 +34,19 @@
   "klient3": "I couldn’t be happier with the service I received from SmartTech. They handled every aspect with professionalism, making the whole process feel effortless.",
   "costumer": "Customer",
   "touch": "GET IN TOUCH",
-  "cpara": "If you have any other questions or are in need of further assistance do not hesitate to contact us below"
+  "cpara": "If you have any other questions or are in need of further assistance do not hesitate to contact us below",
+  "backhome": "Back to Home",
+  "helping1": "Helping Kids Understand and Support People with Disabilities",
+  "support": "At Helping Kids Understand and Support People with Disabilities, we are committed to fostering a culture of empathy, inclusivity, and awareness from a young age. This initiative provides comprehensive resources to educate children about the diverse experiences of individuals with disabilities, promoting respect, compassion, and understanding as core values.",
+  "program": "Our program takes a structured, evidence-based approach to disability education, featuring interactive activities, stories, and discussions that make complex concepts accessible and meaningful for young minds. Through an exploration of various disabilities—physical, intellectual, sensory, and learning—children are encouraged to embrace diversity and recognize the unique talents and strengths that each person contributes to society.",
+  "Core": "Core Components of the Program",
+  "Empathy": "Empathy-Building Experiences: Role-playing and hands-on simulations help children gain insight into the daily challenges faced by individuals with disabilities, nurturing empathy and a deeper understanding. These activities are designed to be age-appropriate, ensuring a safe, impactful learning experience that fosters genuine compassion.",
+  "Positive": "Positive Language and Communication: We provide guidance on inclusive language, equipping children with respectful vocabulary and encouraging curiosity in a way that builds comfort and understanding. Children learn the importance of thoughtful questions and the value of supportive interactions with their peers.",
+  "Supportive": "Supportive Actions and Allyship: Beyond understanding, our program teaches actionable ways for children to support individuals with disabilities—whether through acts of kindness, inclusion, or by standing against bullying. These lessons emphasize the power of small, positive actions in creating inclusive spaces for all.",
+  "Resources": "Resources for Educators and Parents",
+  "extend": "To extend learning beyond the classroom, we offer curated resources for educators and parents, including conversation guides and activities that reinforce positive interactions and encourage continued exploration of these topics. By equipping adults with the tools to guide these discussions, we create a supportive environment for children to grow into inclusive and compassionate individuals.",
+  "OurMission": "Our Mission",
+  "cultivate": "The mission of Helping Kids Understand and Support People with Disabilities is to cultivate a generation that celebrates human diversity and works actively to build inclusive communities. Through our holistic approach, we envision a world where every child grows up understanding the importance of acceptance, empathy, and support for all individuals, regardless of their abilities.",
+  "Join": "Join Us in Building a More Inclusive Future",
+  "Together": "Together, we can help create a world where understanding and support for people with disabilities are fundamental values ingrained from childhood, paving the way for a brighter, more inclusive future for all. Explore our resources and start the journey to empathy and empowerment with Helping Kids Understand and Support People with Disabilities."
 }
